feat: add serverside markdown to html renderer
managed by a lambda running goldmark, this better be cheap

feat: add serverside markdown to html renderer

managed by a lambda running goldmark, this better be cheap
